# finder

./: .gitignore  .speckit-config.yaml  AGENTS.md  CLAUDE.md  README.md  bike_config.yaml  config.yaml  pyproject.toml
.agents/bmad-planner/scripts/: create_planning.py
docs/: facebook-research.md
planning/: bike-search-config.yaml
planning/adaptive-marketplace-search/: architecture.md  epics.md  requirements.md
planning/bike-search/: CLAUDE.md  README.md  architecture.md  epics.md  requirements.md
planning/ring-search-automation/: architecture.md  requirements.md
specs/adaptive-marketplace-search/: CLAUDE.md  README.md  plan.md  spec.md  tasks.md
specs/bike-search/: CLAUDE.md  README.md  plan.md  spec.md
specs/ring-search-automation/: CLAUDE.md  README.md  plan.md  spec.md
src/: __init__.py  bike_scoring.py  bike_search.py  capture.py  cli.py  dedup.py  logger.py  models.py  ring_search.py  scoring.py
src/adapters/: __init__.py  base.py  bicyclebluebook.py  craigslist.py  ebay.py  etsy.py  mercari.py  pinkbike.py  poshmark.py  rubylane.py  shopgoodwill.py  trek_redbarn.py
src/discovery/: __init__.py  base.py  duckduckgo.py  filters.py  google.py
src/extractors/: __init__.py  base.py  bridge.py  generic.py  structured.py
tests/: __init__.py  conftest.py  test_adapters.py  test_bike_integration.py  test_bike_scoring.py  test_capture.py  test_cli.py  test_dedup.py  test_discovery.py  test_extractors.py  test_logger.py  test_poshmark.py  test_ring_search.py  test_scoring.py
tests/e2e/: __init__.py  test_search_flow.py
(+11 files in other folders)
