[project]
name = "ring-search-automation"
version = "0.1.0"
description = "Automated search system to locate a lost antique ring across online marketplaces"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
ring-search = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "duckdb>=1.4.2",
    "types-pyyaml>=6.0.12.20250915",
]
